Author Perspective renaming

--- a/src/browser-action/browser-action.html
+++ b/src/browser-action/browser-action.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Perspective Extension</title>
+    <title>Author Perspective</title>
 
     <link rel="stylesheet" href="browser-action.css" />
 
@@ -10,7 +10,7 @@
 <body>
     <header>
         <img class="perspective-ext-logo" src="../../icons/icon48.png" alt="Perspective Extension Logo" />
-        Perspective Extension
+        Author Perspective
     </header>
 
     <div class="content">
